[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyrecordfind"
version = "1.0.0"
description = "Tools for processing bibliographic records and matching them with OCLC data"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "AI Assistant", email = "assistant@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]
requires-python = ">=3.9"
dependencies = [
    "openpyxl>=3.1.0",
    "requests>=2.31.0",
    "pymarc>=5.3.0",
    "python-dotenv>=1.0.0",
    "requests-oauthlib>=1.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
oclc-matcher = "oclc_record_matcher:main"
marc-extractor = "marc_extractor:main"
marc-analyzer = "marc_field_analyzer:main"

[project.urls]
Homepage = "https://github.com/example/pyrecordmatch"
Repository = "https://github.com/example/pyrecordmatch"
Issues = "https://github.com/example/pyrecordmatch/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
